load("@rules_go//go:def.bzl", "go_library", "go_test")
load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test", "rust_test_suite")

go_library(
    name = "go_bits",
    srcs = glob(
        ["*.go"],
        exclude = ["*_test.go"],
    ),
    importpath = "github.com/vec-jp/symplectix/bits",
)

go_test(
    name = "go_bits_test",
    srcs = glob(["*_test.go"]),
    deps = [
        ":go_bits",
        "@rules_go//go/runfiles",
    ],
)

rust_library(
    name = "bits",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//bits/bit",
        "@crates//:num",
    ],
)

rust_test(
    name = "bits_unit_test",
    crate = ":bits",
)

rust_doc_test(
    name = "bits_doc_test",
    crate = ":bits",
)

rust_test_suite(
    name = "integration",
    srcs = glob(["tests/**/*.rs"]),
    proc_macro_deps = [
        "@crates//:quickcheck_macros",
    ],
    rustc_flags = [
        "-Copt-level=3",
    ],
    deps = [
        ":bits",
        "//bits/bitaux",
        "//bits/bitpacking",
        "@crates//:quickcheck",
    ],
)
