load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "fenwick_tree",
    srcs = ["fenwick_tree.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
    ],
)

rust_test(
    name = "cfg_test",
    crate = ":fenwick_tree",
)

rust_doc_test(
    name = "doc_test",
    crate = ":fenwick_tree",
)

rust_doc(
    name = "doc",
    crate = ":fenwick_tree",
)
