load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test", "rust_test_suite")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "fenwick_tree",
    srcs = ["fenwick_tree.rs"],
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
    ],
)

rust_test_suite(
    name = "integration",
    srcs = glob(["tests/*.rs"]),
    deps = [
        ":fenwick_tree",
        "@crates//:quickcheck",
    ],
    proc_macro_deps = [
        "@crates//:quickcheck_macros",
    ],
)

rust_test(
    name = "cfg_test",
    crate = ":fenwick_tree",
)

rust_doc_test(
    name = "doc_test",
    crate = ":fenwick_tree",
)

rust_doc(
    name = "doc",
    crate = ":fenwick_tree",
)
