load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test", "rust_test_suite")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "fenwicktree",
    srcs = [
        "fenwicktree.rs",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
        "//num",
    ],
)

rust_test_suite(
    name = "integration",
    srcs = glob(["tests/*.rs"]),
    proc_macro_deps = [
        "@crates//:quickcheck_macros",
    ],
    deps = [
        ":fenwicktree",
        "//bits",
        "//num",
        "@crates//:quickcheck",
    ],
)

rust_test(
    name = "cfg_test",
    crate = ":fenwicktree",
)

rust_doc_test(
    name = "doc_test",
    crate = ":fenwicktree",
)

rust_doc(
    name = "doc",
    crate = ":fenwicktree",
)
