load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "fuzz",
    srcs = glob([
        "main.rs",
        "cmd/*.rs",
    ]),
    visibility = ["//visibility:public"],
    deps = [
        "//process",
        "//process/entrypoint",
        "@lib_crates//:anyhow",
        "@lib_crates//:clap",
        "@lib_crates//:thiserror",
        "@lib_crates//:tokio",
        "@lib_crates//:tracing",
        "@lib_crates//:tracing-subscriber",
    ],
)
