load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

rust_library(
    name = "fuzzing_rs",
    srcs = ["fuzzing.rs"],
    crate_name = "fuzzing",
    crate_root = "fuzzing.rs",
    visibility = ["//fuzzing:__subpackages__"],
    deps = [
        "@crates//:anyhow",
        "@crates//:thiserror",
        "@crates//:tracing",
        "@crates//:tracing-subscriber",
    ],
)

rust_binary(
    name = "fuzz_corpus",
    srcs = ["cmd/fuzz_corpus.rs"],
    visibility = ["//fuzzing:__subpackages__"],
    deps = [
        ":fuzzing_rs",
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:tokio",
    ],
)
