load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

rust_library(
    name = "process",
    srcs = glob(
        ["src/**/*.rs"],
        exclude = [
            "src/main.rs",
            "src/bin/**/*",
        ],
    ),
    # will not work as expected on windows
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//process/fsutil",
        "@lib_crates//:anyhow",
        "@lib_crates//:clap",
        "@lib_crates//:humantime",
        "@lib_crates//:libc",
        "@lib_crates//:thiserror",
        "@lib_crates//:tokio",
        "@lib_crates//:tracing",
    ],
)

rust_test(
    name = "process_unit_test",
    size = "small",
    crate = ":process",
    deps = [
        "//testing",
    ],
)

rust_doc_test(
    name = "process_doc_test",
    size = "small",
    crate = ":process",
)
