load("@aspect_bazel_lib//lib:jq.bzl", "jq")

jq(
    name = "status",
    srcs = [],
    filter = "|".join([
        "$ARGS.named.STAMP as $stamp",
        "$stamp // []",
        ".[]",
    ]),
)

genrule(
    name = "git_commit",
    srcs = [":status.json"],
    outs = ["git_commit.txt"],
    cmd = "$(JQ_BIN) -r '.STABLE_GIT_COMMIT' $(location :status.json) > $@",
    toolchains = ["@jq_toolchains//:resolved_toolchain"],
)
