load("@aspect_bazel_lib//lib:jq.bzl", "jq")

jq(
    name = "buildinfo",
    srcs = [],
    args = [
        "--sort-keys",
    ],
    filter = "|".join([
        "$ARGS.named.STAMP as $stamp",
        "$stamp // []",
        "reduce .[] as $x ({}; . * $x)",
    ]),
)

genrule(
    name = "git_revision",
    srcs = [":buildinfo.json"],
    outs = ["git_revision.txt"],
    cmd = "$(JQ_BIN) -r '.STABLE_GIT_REVISION' $(location :buildinfo.json) > $@",
    toolchains = ["@jq_toolchains//:resolved_toolchain"],
)
