load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "testing",
    testonly = True,
    srcs = glob(["src/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:once_cell",
        "@crates//:tempfile",
        "@rules_rust//tools/runfiles",
    ],
)

rust_test(
    name = "testing_unit_test",
    crate = ":testing",
)
