load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "testing_rs",
    testonly = True,
    srcs = ["testing.rs"],
    crate_name = "testing",
    visibility = ["//visibility:public"],
    deps = [
        "@crates//:once_cell",
        "@crates//:tempfile",
        "@rules_rust//tools/runfiles",
    ],
)

rust_test(
    name = "testing_rs_lib_test",
    crate = ":testing_rs",
)
