load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "bit",
    srcs = ["bit.rs"],
    visibility = ["//bits:__subpackages__"],
)

rust_test(
    name = "bit_unit_test",
    crate = ":bit",
)

rust_doc_test(
    name = "bit_doc_test",
    crate = ":bit",
)
