load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "bitaddr",
    srcs = ["bitaddr.rs"],
    visibility = ["//bits:__subpackages__"],
)

rust_test(
    name = "cfg_test",
    crate = ":bitaddr",
)

rust_doc_test(
    name = "doc_test",
    crate = ":bitaddr",
)

rust_doc(
    name = "doc",
    crate = ":bitaddr",
)
