load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "bitaux",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
        "//bits/bit",
        "//bits/bitpacking",
        "//fenwicktree",
        "//num",
    ],
)

rust_test(
    name = "bitaux_unit_test",
    crate = ":bitaux",
)

rust_doc_test(
    name = "bitaux_doc_test",
    crate = ":bitaux",
)
