load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

rust_library(
    name = "bitaux",
    srcs = glob(
        ["*.rs"],
        exclude = ["*_test.rs"],
    ),
    crate_root = "bitaux.rs",
    visibility = ["//bits:__subpackages__"],
    deps = [
        "//bits",
        "//bits/bit:bit_rs",
        "//bits/bitpack",
        "//index/fenwicktree",
        "@crates//:num",
    ],
)

rust_test(
    name = "bitaux_lib_test",
    timeout = "short",
    crate = ":bitaux",
)

rust_doc_test(
    name = "bitaux_doc_test",
    timeout = "short",
    crate = ":bitaux",
)
