load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test", "rust_test_suite")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "bitwise",
    srcs = glob(
        ["*.rs"],
        exclude = ["*_test.rs"],
    ),
    crate_root = "bitwise.rs",
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
    ],
)

rust_test_suite(
    name = "tests",
    srcs = glob(["*_test.rs"]),
    deps = [
        ":bitwise",
        "//bits",
    ],
)

rust_test(
    name = "cfg_test",
    crate = ":bitwise",
)

rust_doc_test(
    name = "doc_test",
    crate = ":bitwise",
)

rust_doc(
    name = "doc",
    crate = ":bitwise",
)
