load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test", "rust_test_suite")

rust_library(
    name = "word",
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    deps = [
        "//bits",
        "@crates//:num",
    ],
)

rust_test(
    name = "cfg_test",
    crate = ":word",
)

rust_doc_test(
    name = "doc_test",
    crate = ":word",
)

rust_test_suite(
    name = "integration",
    srcs = glob(["tests/**/*.rs"]),
    proc_macro_deps = [
        "@crates//:quickcheck_macros",
    ],
    deps = [
        ":word",
        "//bits",
        "@crates//:quickcheck",
    ],
)
