load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test", "rust_test_suite")

rust_library(
    name = "fenwicktree_rs",
    srcs = ["fenwicktree.rs"],
    crate_name = "fenwicktree",
    crate_root = "fenwicktree.rs",
    visibility = ["//visibility:public"],
    deps = [
        "//bits:bits_rs",
    ],
)

rust_test(
    name = "fenwicktree_rs_lib_test",
    crate = ":fenwicktree_rs",
)

rust_doc_test(
    name = "fenwicktree_rs_doc_test",
    crate = ":fenwicktree_rs",
)

rust_test_suite(
    name = "fenwicktree_rs_tests",
    srcs = glob(["*_test.rs"]),
    proc_macro_deps = [
        "@crates//:quickcheck_macros",
    ],
    rustc_flags = [
        "-Coverflow-checks=off",
    ],
    deps = [
        ":fenwicktree_rs",
        "//bits:bits_rs",
        "@crates//:quickcheck",
    ],
)
