load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:private"])

rust_library(
    name = "int",
    srcs = glob(["*.rs"]),
    crate_root = "int.rs",
    visibility = ["//visibility:public"],
)

rust_test(
    name = "int_cfg_test",
    crate = ":int",
)

rust_doc_test(
    name = "int_doc_test",
    crate = ":int",
)

rust_doc(
    name = "int_doc",
    crate = ":int",
)
