load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test", "rust_test_suite")

package(default_visibility = ["//visibility:private"])

rustc_flags = select({
    "@platforms//cpu:x86_64": [
        "-Ctarget-feature=+avx2,+bmi2,+popcnt",
    ],
    "//conditions:default": [],
})

rust_library(
    name = "word",
    srcs = ["word.rs"],
    rustc_flags = rustc_flags,
    visibility = ["//visibility:public"],
)

rust_test_suite(
    name = "tests",
    srcs = glob(["*_test.rs"]),
    rustc_flags = rustc_flags,
    deps = [
        ":word",
    ],
)

rust_test(
    name = "cfg_test",
    crate = ":word",
    rustc_flags = rustc_flags,
)

rust_doc_test(
    name = "doc_test",
    crate = ":word",
)
