load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

rust_library(
    name = "faccess_rs",
    srcs = ["faccess.rs"],
    crate_name = "faccess_rs",
    crate_root = "faccess.rs",
    # not compatible with windows
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@crates//:bitflags",
        "@crates//:libc",
    ],
)

rust_test(
    name = "faccess_rs_lib_test",
    crate = ":faccess_rs",
    data = [
        "faccess.rs",
        "//:.clippy.toml",
        "//:.rustfmt.toml",
    ],
    deps = [
        "//testing:testing_rs",
        "@rules_rust//tools/runfiles",
    ],
)

rust_doc_test(
    name = "faccess_rs_doc_test",
    crate = ":faccess_rs",
)
