load("@rules_rust//rust:defs.bzl", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "faccess",
    srcs = ["faccess.rs"],
    # not compatible with windows
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@crates//:bitflags",
        "@crates//:libc",
    ],
)

rust_test(
    name = "faccess_unit_test",
    crate = ":faccess",
    data = [
        "faccess.rs",
        "//:.clippy.toml",
        "//:.rustfmt.toml",
    ],
    deps = [
        "//testing",
        "@rules_rust//tools/runfiles",
    ],
)

rust_doc_test(
    name = "faccess_doc_test",
    crate = ":faccess",
)
