load("@rules_rust//rust:defs.bzl", "rust_doc", "rust_doc_test", "rust_library", "rust_test")

package(default_visibility = ["//visibility:public"])

rust_library(
    name = "entrypoint",
    srcs = glob(["src/**/*.rs"]),
    # will not work as expected on windows
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "@platforms//os:macos": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
    deps = [
        "@crates//:anyhow",
        "@crates//:clap",
        "@crates//:futures",
        "@crates//:humantime",
        "@crates//:libc",
        "@crates//:thiserror",
        "@crates//:tokio",
        "@crates//:tracing",
    ],
)

rust_test(
    name = "entrypoint_test",
    size = "small",
    crate = ":entrypoint",
    deps = [
        "//testing",
    ],
)

rust_doc_test(
    name = "entrypoint_doc_test",
    size = "small",
    crate = ":entrypoint",
)

rust_doc(
    name = "entrypoint_doc",
    crate = ":entrypoint",
)
